# rules_clojure

./: .gitignore  BUILD  README.md  WORKSPACE  repositories.bzl  rules.bzl  runtime.bzl  toolchain.bzl
.github/workflows/: ci.yml
examples/setup/default/: BUILD.bazel  WORKSPACE  example.clj  example.cljs  math.cljc
internal/: BUILD
rules/: BUILD  binary.bzl  compile.bzl  library.bzl  repl.bzl  test.bzl
scripts/: library.clj  test.clj
tests/: BUILD  library.bzl
